--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-
-/* Your CSS Code here. */
-.holder{
-	display: grid;
-	grid-template-column: repeat(2 200px);
-	grid-template-row: repeat(2 200px);
+.holder {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: 200px;
+  height: 200px;
 }
